--- a/1.org
+++ b/1.org
@@ -10,8 +10,10 @@
 #+AUTHOR: Stephen Brown
 
 #+BEGIN_HTML
-<div class=ribbon>
+<div class="github-fork-ribbon-wrapper left">
+<div class="github-fork-ribbon">
 <a href="https://github.com/stsb11/as_theory">Fork me on GitHub</a>
+</div>
 </div>
 <center>
 <imgzz src='' width=33%>
