--- a/2.org
+++ b/2.org
@@ -6,15 +6,17 @@
 #+STYLE: <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Ubuntu' rel='stylesheet' type='text/css'>
 #+END_COMMENT
 #+OPTIONS: f:nil author:nil num:1 creator:nil timestamp:nil 
-#+TITLE: Materials
+#+TITLE: Input Transducers
 #+AUTHOR: Stephen Brown
 
 #+BEGIN_HTML
-<div class=ribbon>
-<a href="https://github.com/stsb11/gcse_theory">Fork me on GitHub</a>
+<div class="github-fork-ribbon-wrapper left">
+<div class="github-fork-ribbon">
+<a href="https://github.com/stsb11/as_theory">Fork me on GitHub</a>
+</div>
 </div>
 <center>
-<imgzz src='' width=33%>
+<img src='img/ldr_1.jpg' width=20%>
 </center>
 #+END_HTML
 
@@ -102,106 +104,73 @@ Imagine you wanted to make a flashing bike light; using an LED and a switch alon
 In a board game, you might want to have an electronic dice to roll numbers from 1 to 6 for you. 
 In a car, a circuit is needed to ensure that the airbags only deploy when there is a sudden change in speed, AND the passenger is wearing their seatbelt, AND the front or rear bumper has been struck. PIC chips can carry out their instructions very quickly, performing around 1000 instructions per second - as such, they can react far more quickly than a person can. 
 * Introduction
-- When creating a new product, one consideration is what to make it from. When choosing a material, there are a number of considerations. How should it look when it’s finished (aesthetics)? Can it be formed and joined in the way you want it to? Is it strong enough for the task? Is it cost-effective? Is the material “sustainable”? 
-
-Task: Complete the following tables, using the Internet and text book to help you. 
-
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: activity
 :END:
-** Common woods
+- You need to be able to know about electronic transducers, and to be able to design different circuits using appropriate sensors depending on the scenario you are presented with. The key components to achieve these are listed on this page.
+** Definition
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: learn
 :END:
-- Woods come from trees, which are chopped down, then worked into sheets of wood, or planks. As a natural product, they are sustainable (if the forest they come from is being re-planted), and have an attractive grain in the wood.  
-| Wood  | Category | Colour      | Properties             | Common Uses      |
-|-------+----------+-------------+------------------------+------------------|
-| Pine  |          |             | Durable, machines well |                  |
-| Oak   |          |             |                        | Furniture Making |
-| Beech |          | Light brown |                        |                  |
-| Larch | Softwood |             |                        |                  |
-
-** Manufactured boards
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: learn
-:END:
-- Man-made boards are those which are produced in factories. They tend to have a uniform appearance, and have unique properties. 
-| Board     | Colour                       | Properties                                                | Common Uses                      |
-|-----------+------------------------------+-----------------------------------------------------------+----------------------------------|
-| Cardboard |                              |                                                           |                                  |
-| MDF       |                              |                                                           | Cupboard doors                   |
-| Plywood   |                              | Strong; comes in different finishes to improve appearance |                                  |
-| Chipboard | Brown, with a coarse texture |                                                           |                                  |
-| Hardboard |                              |                                                           | Furniture, flooring construction |
- 
-** Plastics
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: learn
-:END:
-- Often derived from oil, plastics provide a variety of durable materials which can be formed easily into whatever shape is required, and can be highly durable. Their relatively low cost has led to their popularity for use in all manner of every day objects. Unfortunately, plastics tend not to be easily bio-degradable (often taking several hundred years to break down in landfill), and as such need to be recycled wherever possible. 
-- Plastics can be either classed as thermosetting, or thermoplastic. When forming them into a shape, *Thermosetting* polymers normally need to be mixed with a curing agent, which allows them to set solid. Once set, they cannot be re-formed into another shape. *Thermoplastics* can be repeatedly heated until soft, then cast into a new shape and cooled.
-| Plastic           | Category      | Properties                     | Common Uses                  |
-|-------------------+---------------+--------------------------------+------------------------------|
-| Acrylic           | Thermoplastic |                                |                              |
-| ABS               |               | High impact resistance, strong |                              |
-| HIPS              |               |                                | Packaging                    |
-| PP                |               |                                | Plastic pipes, school chairs |
-| Nylon             |               | Hard wearing                   |                              |
-| Urea Formaldehyde | Thermoset     |                                |                              |
-
-* Metals
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: learn
-:END:
-- Metals come from ores which are dug from the ground, and purified. They can be cast into sheets, or ingots ready for forming into different shapes. 
-- Some metals can be combined with other materials to form *alloys*, which have new, unique properties. Steel is made by combining iron and carbon, for instance. 
-- Ferrous metals are those which contain iron.
-| Metal           | Category    | Colour | Properties                                 | Common Uses      |
-|-----------------+-------------+--------+--------------------------------------------+------------------|
-| Copper          | Non-ferrous |        | Excellent electrical and thermal conductor |                  |
-| Mild Steel      |             |        |                                            | Nuts, bolts, etc |
-| Aluminium       |             | Grey   |                                            |                  |
-| Stainless Steel | Ferrous     |        |                                            |                  |
-
-** Smart Materials
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: learn
-:END:
-- 
-| Material                     | Properties                                                           | Common Uses                     |
-|------------------------------+----------------------------------------------------------------------+---------------------------------|
-| Smart memory Alloys          | Can be bent out of shape, but returns to original shape when heated. |                                 |
-| Piezoelectric materials      |                                                                      | Mics, speakers, alarm systems.  |
-| Quantum Tunnelling compsite  | An insulator which becomes a conductor when put under pressure.      |                                 |
-| Electroluminescent Materials |                                                                      | Safety clothing, safety lights. |
-
-* Understanding Check
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: activity
-:END:
-** Past Paper Questions
+- An input transducer is one which converts an input (e.g. temperature, light level, sound) into either a voltage level or a resistance (which can be converted into a voltage level). 
+** Components
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: try
 :END:
-*June 2010, Q5a*. This question is about programming a greenhouse temperature / environmental control system model. The greenhouse model has a heat sensor, and a roof vent that opens and closes to regulate the temperature.
+- Sound: Microphone. 
+- Light: LDR, IR receiver or photo-transistor. 
+- Pressure: Micro-switch (digital) or quantum tunnelling composite (analogue). 
+- Rotary movement: Rotary Potentiometer
+- Linear movement: Switch, linear potentiometer. 
+- Strain: Strain gauge. 
+- Moisture: Darlington pair with probes
+- Vibration: Motion sensor
+- Magnetism: Reed switch (digital) or Hall effect sensor (analogue)
+- Temperature: Thermistor or Digital thermometer
 
-(a) (i) Suggest a specific material for the greenhouse frame. /(2 marks)/
+* Practice questions
+:PROPERTIES:
+:HTML_CONTAINER_CLASS: activity
+:END:
+** Past Paper questions
+:PROPERTIES:
+:HTML_CONTAINER_CLASS: learn
+:END:
+- *June 2009 SCT1.* (a) (i) Describe the operation of a Light Dependant Resistor (LDR). Make reference to both its sensing and resistance properties. /(3 marks)/
+- (ii) Describe the operation of a Strain Gauge. Make reference to both its sensing and resistance properties in your answer. /(3 marks)/
+- (b) An LDR with a resistance of 5kΩ at a light level of 10 lux is connected in series with a 47kΩ resistor to create a potential divider shown in Figure 1. The supply voltage is 6v. /(Lux is a measure of illuminance)/. Given that…
+#+BEGIN_HTML
+<math display='block'>
+<msub><mi>V</mi> <mn>OUT</mn></msub>
+<mo>=</mo>
+<mfrac>
+<mrow>
+<msub><mi>R</mi><mn>2</mn></msub>
+</mrow>
+<mrow>
+<mo>(</mo><msub><mi>R</mi><mn>1</mn></msub><mo>+</mo><msub><mi>R</mi><mn>2</mn></msub><mo>)</mo>
+</mrow>
+</mfrac>
+<mo>&#x2062;<!-- &InvisibleTimes; --></mo>
+<msub><mi>V</mi><mn>IN</mn></msub>
+</math>
+#+END_HTML
+- Calculate V_OUT. /(4 marks)/
+- (c) Design a circuit which includes the potential divider shown in part (b) and will: -
+    - light a green LED when the light level rises above 10 lux
+    - light a red LED when the light level falls below 10 lux. 		/(12 marks)/
+- (d) The circuit in part (c) could be housed in a case made from a metal.
+    - (i) Name a suitable specific metal for the circuit casing. /(1 mark)/
+    - (ii) Explain your choice making reference to two properties of the material. /(4 marks)/
+- (e) With the aid of annotated sketches, describe a suitable manufacturing process for a casing using the metal you identified in part (d)(i). /(7 marks)/
+- (f) Quality Control and Quality Assurance are two procedures used by manufacturing industries. Describe three differences between Quality Control and Quality Assurance. /(3× 2 marks)/
 
-(a) (ii) Explain why the material that you have selected is suitable. /(2 marks)/
 
-(a) (iii) Suggest a suitable component to sense that the roof vent is closed. /(2 marks)/
+- *June 2009, Q3.* A switch is classified as DPDT. Explain, with the aid of a diagram, how this switch works.	/(4 marks)/
 
-*June 2011, Q4a*. This question is about a washing machine control system model. The washing machine model is made from plywood and has: -
-- a door that opens and shuts
-- a button to start the simulated wash
-- a door lock to stop the door opening
-- a geared motor to turn the wash drum
-- an LED that lights to show that the drum is turning. 
-[[./img/2011_q4a.png]]
-(a) (i) Suggest a suitable plastic for the window in the door. /(1 mark)/
 
-4 (a) (ii) Explain why the plastic you have named is suitable. /(2 marks)/
-
-4 (a) (iii) Suggest a suitable component to operate the door lock. /(1 mark)/
+- *June 2011, Q1.* Explain the following terms and give an example for each.
+    - (a) An Input transducer /(2 marks)/
+    - (b) An Output transducer /(2 marks)/
 
 [[file:index.html][Return to homepage]]
