--- a/examples.org
+++ b/examples.org
@@ -7,35 +7,38 @@
 #+END_COMMENT
 #+OPTIONS: f:nil author:nil num:1 creator:nil timestamp:nil 
 
-#+TITLE: GCSE Past Paper solutions
+#+TITLE: AS Past Paper solutions
 #+AUTHOR: Stephen Brown
 #+OPTIONS: toc:nil f:nil author:nil num:nil creator:nil timestamp:nil 
 
 #+BEGIN_HTML
-<div class=ribbon>
+<div class="github-fork-ribbon-wrapper left">
+<div class="github-fork-ribbon">
 <a href="https://github.com/stsb11/gcse_theory">Fork me on GitHub</a>
+</div>
 </div>
 #+END_HTML
 * [[file:examples/2009.docx][June 2009 Paper]]
 :PROPERTIES:
-:HTML_CONTAINER_CLASS: activity
+:HTML_CONTAINER_CLASS: link-heading
 :END:
 * [[file:examples/2010.docx][June 2010 Paper]]
 :PROPERTIES:
-:HTML_CONTAINER_CLASS: activity
+:HTML_CONTAINER_CLASS: link-heading
 :END:
 * [[file:examples/2011.docx][June 2011 Paper]]
 :PROPERTIES:
-:HTML_CONTAINER_CLASS: activity
+:HTML_CONTAINER_CLASS: link-heading
 :END:
 * [[./examples/2012.docx][June 2012 Paper]]
 :PROPERTIES:
-:HTML_CONTAINER_CLASS: activity
+:HTML_CONTAINER_CLASS: link-heading
 :END:
 * [[file:examples/2013.docx][June 2013 Paper]]
 :PROPERTIES:
-:HTML_CONTAINER_CLASS: activity
+:HTML_CONTAINER_CLASS: link-heading
 :END:
-
-
-- [[./index.html][Return to homepage]]
+* [[./index.html][Return to homepage]]
+:PROPERTIES:
+:HTML_CONTAINER_CLASS: link-heading
+:END:
