--- a/8.org
+++ b/8.org
@@ -16,7 +16,7 @@
 </div>
 </div>
 <center>
-<img src='./img/steel.jpg' width=40%>
+<img src='./img/pencil.png' width=40%>
 </center>
 #+END_HTML
 
@@ -103,7 +103,7 @@ While they might not look like much, there is more computational power in a sing
 Imagine you wanted to make a flashing bike light; using an LED and a switch alone, you'd need to manually push and release the button to get the flashing effect. A PIC chip could be programmed to turn the LED off and on once a second.
 In a board game, you might want to have an electronic dice to roll numbers from 1 to 6 for you. 
 In a car, a circuit is needed to ensure that the airbags only deploy when there is a sudden change in speed, AND the passenger is wearing their seatbelt, AND the front or rear bumper has been struck. PIC chips can carry out their instructions very quickly, performing around 1000 instructions per second - as such, they can react far more quickly than a person can. 
-* Introduction
+* The Impact of CAD/CAM
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: activity
 :END:
@@ -111,8 +111,7 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: learn
 :END:
-
-- The introduction of Computer Aided Design in the 1980’s led to engineers being able to unambiguously create their designs, and share and collaborate ideas far more effectively. Before this, draftsmen were employed to create and duplicate technical drawings in different viewpoints, often taking days to create something which can be achieved in moments using software now. The advantages of using CAD over a manual, hand-drawn sets of plans are as follows: -
+- The introduction of Computer Aided Design in the 1980’s led to engineers being able to unambiguously create their designs, and share and collaborate ideas far more effectively. Before this, draftsmen were employed to create and duplicate technical drawings in different viewpoints, often taking days to create something which can be achieved in moments using software now. The advantages of using CAD over a manual, hand-drawn sets of plans are as follows:
    - Can be more accurate; reduction in human error,
    - Additional measurements can be taken in software,
    - Different views are available easily without the need for a new drawing,
@@ -126,163 +125,62 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
    - Powerful PC hardware is required to render more advanced models
     - Staff need to be trained on the use of the new software
 
-- CAM (short for Computer Aided Manufacture) is the use of software to control machines to manufacture work pieces. We have two CAM machines in the department – a laser cutter and a 3d router, and are investigating getting a 3D printer. CAM is used heavily in the automotive and technology (e.g. mobile ‘phone and computer) sectors, due to their advantage over a traditional human workforce. The main advantages are…
+- *CAM* (short for Computer Aided Manufacture) is the use of software to control machines to manufacture work pieces. We have two CAM machines in the department – a laser cutter and a 3d router, and are investigating getting a 3D printer. CAM is used heavily in the automotive and technology (e.g. mobile ‘phone and computer) sectors, due to their advantage over a traditional human workforce. The main advantages are…
 
-- Machines are typically more precise than humans in their work, able to provide finishes accurate to within microns,
-- Machines can work 24/7, requiring no rest or breaks,
-- Machines require no wages, nor will they strike or fall ill,
-- CAM systems won’t lose concentration, and can be re-programmed to produce different parts at the end of a production run,
-- Production speed is usually higher than manual production
+    - Machines are typically more precise than humans in their work, able to provide finishes accurate to within microns,
+    - Machines can work 24/7, requiring no rest or breaks,
+    - Machines require no wages, nor will they strike or fall ill,
+    - CAM systems won’t lose concentration, and can be re-programmed to produce different parts at the end of a production run,
+    - Production speed is usually higher than manual production
 
 - The disadvantages of CAM systems are: -
+    - Initial startup costs are high
+    - Extensive training is required to use the equipment
+    - Can be slower than traditional methods for one-off production 
 
-- Initial startup costs are high
-- Extensive training is required to use the equipment
-- Can be slower than traditional methods for one-off production 
 
 - Methods of working. As a result of the introduction of CAD/CAM, the dynamic of the manufacturing workforce has shifted. Historically, one would expect to see a large number of low-skilled workers assembling parts and products, while a team of engineers and designers developed new ideas that were drawn up by draftsmen. With the advent of CAD/CAM, engineers can create and test their designs in real-time on computers, using software to mathematically prove that their designs will work when fabricated, and to test components before manufacture to identify likely points of failure. 
-
-- Methods of production. 
-- CAD/CAM replaces the need for factory workers to use jigs and templates to produce parts, as they are automatically cut/formed by CNC machines. 
-
-** Metals
+- In terms of methods of production, CAD/CAM replaces the need for factory workers to use jigs and templates to produce parts, as they are automatically cut/formed by CNC machines. 
+** Design Process
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: learn
 :END:
-- *Ferrous* metals are those that contain [[http://en.wikipedia.org/wiki/Iron][iron]]. Steel, for example. All ferrous metals will rust over time, due to their iron content. All metals change their properties, dependent on how they are heated and cooled.
-- [[http://en.wikipedia.org/wiki/Non-ferrous_metal][*Non-ferrous*]] metals are those which do not contain iron, such as brass.
-    - A good conductor of electricity and heat, [[http://en.wikipedia.org/wiki/Aluminium][aluminum]] is a light-weight metal, used in aircraft construction, for power cables, drinks cans and in cookware.  
-    - [[http://en.wikipedia.org/wiki/Titanium][Titanium]] is a very strong metal, used in making the strongest and lightest parts of modern fighter jet planes, as well as in high-performance sports equipment, medical implants and jewelry. It does not corrode, and has good resistance to sea water and chlorine.
-- [[http://en.wikipedia.org/wiki/Alloy][*Alloys*]] are a mixture of two or more elements, one of which is a metal.  They have properties different to those of the metals they are composed of. A few common examples are:
-    - [[http://en.wikipedia.org/wiki/Brass][Brass]]. Made since biblical times from copper and zinc, brass is used in low-friction applications (e.g. gears and locks), and has a golden colour. It is also used in musical instruments as it has pleasant acoustic properties. 
-    - [[http://en.wikipedia.org/wiki/Bronze][Bronze]]. Made from copper and tin, this was the first alloy to be discovered. Bronze is used when it is desirable for parts to be able to last a long time, and not be corroded by air or water. 
-    - Different [[http://en.wikipedia.org/wiki/Steel][steel]]s are made by adding carbon to iron (0.02%-1.7% carbon). Steel is harder and stronger than iron alone; adding additional carbon results in harder and stronger steel, at the expense of it becoming increasingly brittle. It is used for car bodies, bridge construction, buildings and tools.  
-    - Stainless steel is made with the addition of around 11% chromium, which adds an increased resistance to staining and rusting compared to regular steel. It is used for surgical instruments, sinks and cutlery.
-** Plastics
+- According to the UK Design Council, the major routes and stages within design process can be described as, Discover, Define, Develop and Deliver. 
+     - http://www.designcouncil.org.uk/designprocess
+
+- This could also be expressed more traditionally as Research, Analyse, Design & Develop, Make, Test and Evaluate. 
+
+
+
+** Production Methods
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: learn
 :END:
-- Polymers (and the discovery of plastics) revolutionized the 20th century, giving rise to the mass production of strong, cheaply produced products for the masses. The environmental cost was only considered in the latter half of the 20th century, when the impact of oil-based products which took hundreds of years to break down in landfill sites started to be realized. 
-- A [[http://en.wikipedia.org/wiki/Thermoplastic][*thermoplastic*]] is one that becomes soft when heated and hard when cooled. 
-- [[http://en.wikipedia.org/wiki/Acrylonitrile_butadiene_styrene][ABS]] (Acrylonitrile butadiene styrene) is highly impact resistant and tough. Commonly used for musical instruments, golf clubs, car trim components, car bumpers, medical devices for blood access, protective headgear, whitewater canoes and Lego bricks.
-- [[http://en.wikipedia.org/wiki/Poly(methyl_methacrylate)][Acrylic]] (Polymethyl methacrylate) is stiff, hard (but scratches easily), durable, brittle in small sections, a good electrical insulator, which machines and polishes well. It is used for many applications, such as making signs, covers of storage boxes, aircraft canopies and windows, covers for car lights, wash basins and baths.
-- [[http://en.wikipedia.org/wiki/Nylon][Nylon]] (Polyamide) is creamy in colour, tough, fairly hard, resists wear, self-lubricating and has good resistance to chemicals. Commonly used to produce bearings, gear wheels, casings for power tools, hinges for small cupboards, curtain rail fittings and clothing. 
-- [[http://en.wikipedia.org/wiki/Polystyrene#Copolymers][HIPS]] (High Impact Polystyrene) is economical and impact-resistant plastic that is easy to machine and fabricate. Used for low strength structural applications when impact resistance, machinability, and low cost are required. It is frequently used machining pre-production prototypes since it has excellent dimensional stability and is easy to fabricate, paint, and glue.
-- A [[http://en.wikipedia.org/wiki/Thermosetting_polymer][*thermosetting plastic*]] (also known in industry as thermoset) is a plastic which irreversibly cures. They typically start off in a liquid form (so they can be molded into shape), and are then cured by a process such as heat, chemical reaction or irradiation to set them.
-- [[http://en.wikipedia.org/wiki/Urea-formaldehyde][Urea formaldehyde]] provides high tensile strength, good surface hardness and heat resistance as well as being a good electrical insulator. It is used for electrical fittings, handles and control knobs and to make adhesives. Its is also used as the bonding agent in.
-- [[http://en.wikipedia.org/wiki/Melamine_resin][Melamine formaldehyde]] is stiff, hard, strong and resists some chemicals and stains. It is commonly used in laminates for work surfaces, electrical insulation and tableware. 
-- [[http://en.wikipedia.org/wiki/Epoxy][Epoxy resin]] is a good electrical insulator, which is hard, brittle unless reinforced and resists chemicals well. It is used mainly for casting and encapsulation, adhesives and for the bonding of other materials.
-** Woods
+- There are four main types of industrial production methods:
+    - *One-off production* is when only one product is made at a time. Every product is different so it is labour intensive. Products may be made by hand or a combination of hand and machine methods.
+    - *Batch production* is when a small quantity of identical products are made. Batch production may also be labour intensive, but jigs and templates are used to aid production. Batches of the product can be made as often as required. The machines can be easily changed to produce a batch of a different product.
+    - *Mass production* is when hundreds of identical products are made, usually on a production line. Mass production often involves the assembly of a number of sub-assemblies of individual components. Parts may be bought from other companies. There is usually some automation of tasks (eg by using Computer Numerical Control machines) and this enables a smaller number of workers to output more products.
+    - *Continuous flow production* is when many thousands of identical products are made. The difference between this and mass production is that the production line is kept running 24 hours a day, seven days a week to maximize production and eliminate the extra costs of starting and stopping the production process. The process is highly automated and few workers are required.
+** Quality Control and Quality Assurance
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: learn
 :END:
-- Wood has been used since pre-historic times to provide fuel for heat, and as a building material to produce homes and tools. We divide woods into three categories.
-- [[http://en.wikipedia.org/wiki/Hardwood][*Hardwoods*]] come from broad-leaved, deciduous trees. The main hardwood timbers are ash, beech, birch, cherry, elm, mahogany, oak, balsa and teak.
-     - Ash is light, creamy-brown in colour and both tough and flexible. It is often used to make sports equipment, wooden ladders and tool handles.
-     - Beech is white to pinkish-brown in colour, close-grained, hard, tough, strong, but warps easily. Commonly found in	furniture, toys and tool handles.
-     - Elm is light to medium brown in colour, tough, resists splitting, and is durable in water. Elm is commonly used for indoor and outdoor furniture.
-     - Mahogany is Pink to reddish-brown colour, fairly strong, durable and used for good quality furniture.
-     - Oak is light brown colour, strong, hard, and tough. It corrodes steel screws and fittings. It is used for interior woodwork and good quality furniture.
-     - Balsa is creamy/light brown in colour, which is extremely fast growing and very lightweight. While low in density, it is high in strength and is commonly used for light, stiff structures, such as model aircraft and model buildings.  
-- [[http://en.wikipedia.org/wiki/Softwood][*Softwoods*]] are from fast-growing coniferous trees which are evergreen, needle-leaved, cone-bearing trees, such as cedar, fir and pine.
+- During the manufacturing process, QC And QA are vital to ensure a high-quality end product which is safe, and meets client expectation. In the areas such as aeronautical, automotive and medical industries, getting this right can have life or death implications.
 
-- Tip: Hardwood and Softwood do not refer to the properties of the wood: some softwoods can be hard and some hardwoods can be soft.
-** Manmade Boards
+
+- As a quick guide, QC is like checking from time to time that your goldfish is still alive. With QA, you would also aim to make sure that the filter and pump work correctly, the water is the right temperature and is changed on schedule, and that everyone in the household knows when and how much to feed it.
+- *Quality Control* is where a product is inspected or tested to ensure that it meets the requirements for the specific product. For instance, a car part may need to be made from aluminium, weight 54.5g and measure 3mm x 6mm. If out of 50 parts inspected, 49 match these requirements, but one weighs 55g and is 3mm x 6.5mm, that part would fail its quality control check. Quality Control does not ensure quality – it informs where it is missing.
+- *Quality Assurance* seeks to look more closely at the process of making the product, seeks to find common areas where quality has the potential to slip and looks to address these so that manufactured parts fail less often. This can happen right through the design, development and manufacture stages.
+
+
+- More info: http://www.iso9001consultant.com.au/QA.html
+** Health and Safety
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: learn
 :END:
-- [[http://en.wikipedia.org/wiki/Engineered_wood][Manmade boards]] are created from other woods, to give specific properties (and are usually relatively cheap compared to hard and softwoods).
-- *Blockboard* is built up with a core of softwood strips bonded together with adhesive and covered with a sheet of plywood on either side. Used as a building material and for furniture manufacture including fitted kitchens / bedrooms.
-- [[http://en.wikipedia.org/wiki/Particle_board][*Chipboard*]] is made up of small chips of wood bonded together with resin and formed into sheets by compression. It is not as strong as plywood and block board but it is not expensive. Chipboard is often covered with a plastic laminate or wood veneer and used in furniture. Chipboard could contain partials of metal, grit and any other rubbish that gets taken up into a tree whilst growing, is also the most unstable board because of air pockets, will swell up to twice its thickness when damp. 	
-- *Hardboard* is made from wood fibres that have been pulped. The pulp is put under pressure until the fibres bond to produce a tough board that is smooth on one side and rough on the other. It is not as strong as the other boards. When supplied, it is smooth one side and rough the other, because of the drying process and is flexible, generally buckles at the first sign of dampness in the air, used mainly for backs of cupboards.
-- [[http://en.wikipedia.org/wiki/Medium-density_fibreboard][*MDF*]] (Medium Density Fibreboard) is quality board, which is relatively cheap. This board is composed of fine wood dust and resin pressed into a board. MDF is the most stable manmade board, and can have a ply or laminate finish added to it to make its finish more aesthetically pleasing. Low Density and High density re also available, as it water resistant MDF (which is usually green in colour). MDF can be worked, shaped and machined easily. Paint can be applied to it without the need for an undercoat or primer. Used in the building and furniture trades, as well as in schools.
-- [[http://en.wikipedia.org/wiki/Plywood][*Plywood*]] is made from veneers (thin plies) of timber with each grain layer being at right angles to each other and bonded together by resin and pressure. A number of grades are available, designed to suit a variety of situations, such as Marine plywood that is moisture resistant (although it will still warp) or weatherproof plywood. Ply is the only board that uses layers of pure wood. If the grains are laid parallel with each other it becomes flexible along the grain; if laid at right angles it becomes more rigid. 
-- All boards come in standard thicknesses of 3, 6, 9, 12, 15, 18 & 25mm.
-** Smart Materials
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: learn
-:END:
-- Advances in technology have yielded cutting edge, Smart materials, which have been created to provide specific properties. 
-- [[http://en.wikipedia.org/wiki/Shape-memory_alloy][*Smart wire*]] is sometimes called ‘Nitinol’, as it is a composed of nickel and titanium. It can be folded to form complex shapes quite easily and it conducts electricity, but is very expensive when compared to ordinary steel or even copper wire. However, it has properties that make it very special:
-     1. The wire has a memory - for example, if it is folded to form a shape and then heated above 90°C it returns to its original shape.
-     2. The material can also be ‘programmed’ to remember a shape. This can be achieved by folding the wire to a particular shape and clamping it in position. The wire is then heated for approximately five minutes at precisely 150° or pass an electric current through the wire. If the wire is now folded into another shape and then placed in hot water it returns to the original ‘programmed’ shape. 
-- *Muscle wire* is also a nickel and titanium alloy. At room temperature it can be stretched by a small force. However, when a small current is passed through the wire it returns to a much harder form and to its original length with a reasonable force. When in use a muscle wire can be stretched up to 8 percent of its length and still recover. However, this can only be done a few times until it breaks or stops returning to its original length. Its life cycle can be extended dramatically if it is stretched to between 3 to 5 percent of its overall length. Within this range it will go through the stretching and return cycle millions of times.
-- [[http://en.wikipedia.org/wiki/Polycaprolactone][*Polymorph*]] is a thermoplastic material that can be shaped and reshaped any number of times. it is normally supplied as granules that look like small plastic beads. In the classroom it can be heated in hot water and when it reaches 62 degrees centigrade the granules form a mass of ‘clear’ material. When removed from the hot water it can be shaped into almost any form and on cooling it becomes as solid as a material such as nylon. Although expensive, polymorph is suitable for 3D modeling as it can be shaped by hand or pressed into a shape through the use of a mold.
-- [[http://en.wikipedia.org/wiki/Quantum_tunnelling_composite][*Quantum Tunneling Composite*]] (QTC) is available as small “pills”. This material provides increasing levels of conductivity as pressure is applied to it, making it useful for dimmer switches, pressure sensors and for integrating into clothing.
-** Comparative Testing 
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: learn
-:END:
-- When selecting materials for a particular task, it may be necessary to test different samples to ensure that they will need the product specification (e.g. for weight, cost, durability, etc). 
-- [[http://en.wikipedia.org/wiki/Ultimate_tensile_strength][*Tensile strength*]] (how much something can be stretched before it breaks) can be tested in a workshop by clamping a sample, then hanging increasing amounts of weight from it until the sample breaks. Some materials will start to stretch first, whereas others hold their shape and break suddenly. 
-- [[http://en.wikipedia.org/wiki/Compressive_strength][*Compressive strength*]] (resistance to deformation by a crushing load) can be measured by finding the amount of weight required to deform a material. Some materials rupture when the load exceeds their ultimate compressive strength (e.g. Concrete), whereas other materials (e.g. Wood and some plastics) deform. With non-rupturing materials, measurements can be taken of how much force is required to deform samples by 1%, 5%, 10%, etc. 
-- [[http://en.wikipedia.org/wiki/Hardness][*Hardness*]] can be measured by taking samples of the different materials that are to be tested which have a sharp corner, and seeing which sample can scratch which material. By comparing all the materials, it will be possible to rank all the samples to establish which is the hardest. 
-- [[http://en.wikipedia.org/wiki/Toughness][*Toughness*]] can be tested by placing identical-sized samples of materials in a vice, then subjecting each one to an identical impact (e.g. a hammer blow set up by a jig, and dropped from the same angle each time), and measuring the angle the material is bent to. 
-- [[http://en.wikipedia.org/wiki/Fusibility][*Fusibility*]] can be measured by heating samples until they melt, and recording the temperature at which this occurs.
-* Recap
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: activity
-:END:
-** Past Paper Questions
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: try
-:END:
-- *June 2009, SCT1. Q4.* (a) With reference to the working properties of each material and any other factors which you consider relevant, explain the suitability of the following materials for each of the products. 
-    - Wardrobe made from pine
-	- Knife blade made from stainless steel
-    - Kitchen worktop made from plastic coated chipboard
-	- Mobile phone casing made from ABS plastic /(4× 5 marks)/
-- (b) Discuss the advantages and disadvantages of using CAD/CAM instead of jigs or templates in manufacturing situations. /(8 marks)/
+- Risk assessment in the design and manufacture of products and systems is the process of determining the probability of design flaws or engineering errors relating to a particular product or service affecting the cash flow, reputation, or other aspect of an organization. 
 
+- Risk assessments should be designed to help to identify and resolve potential problems before a product is manufactured and sold.
 
-- *Specimen paper, Q1.* Explain the following terms and give an example of a specific material for each term: -
-	(a) Alloy /(2 marks)/
-	(b) Composite /(2 marks)/
-
-
-- *June 2009, Q1.* Giving an example material, explain the term "non-ferrous metal". /(2 marks)/
-
-
-- *June 2009, Q2.* Giving an example material, explain the term "thermoforming plastic". /(2 marks)/
-
-
-- *June 2010, Q1.* Explain the following terms and give an example of a specific material for each. 
-    - (a) An alloy /(2 marks)/
-    - (b) A hardwood /(2 marks)/
-
-
-- *June 2010, Q5.* (a) (i) Define the term tensile strength. /(2 marks)/
-- (a) (ii) With the aid of annotated sketches describe a suitable test that could be carried out to compare the tensile strength of a range of metals. Your answer should indicate:
-	- the approximate size of the sample
-	- the method of applying the load
-	- the data that needs to be collected
-	- the method of collecting the data
-	- how the data is analysed. /(8 marks)/
-- (b) (i) Define the term compressive strength. /(2 marks)/
-- (b) (ii) With the aid of annotated sketches describe a suitable test that could be carried out to compare the compressive strength of a range of woods. Your answer should indicate:
-	- the approximate size of the sample
-	- the method of applying the load
-	- the data that needs to be collected
-	- the method of collecting the data
-	- how the data is analysed. /(8 marks)/
-
-
-- *June 2011, Q3.* With the aid of an annotated sketch, describe a method of using heat to permanently join two pieces of metal together. /(4 marks)/
-
-
-- *June 2012, Q1.* (a) Name a man-made board that uses lamination for strength. /(1 mark)/
-     - (b) Name an alloy. /(1 mark)/
-     - (c) List the two main materials that make up the alloy you have named above. /(2 marks)/
-
-
-- *June 2012, Q3.* With the aid of an annotated sketch, describe a method of temporarily joining two pieces of metal together so they can be disassembled for maintenance purposes. /(4 marks)/
-
-
-- *June 2012, Q6.* (a) Using annotated sketches, describe a suitable test that could be carried out to compare the resistance to bending forces of a range of plastics. Your answer should indicate:
-	- the approximate size of the sample
-	- the method of applying the load
-	- the data that needs to be collected
-	- the method of collecting the data
-	- how the data is analysed. /(10 marks)/
 
 [[file:index.html][Return to homepage]]
